--- a/src/partials/_visibility.scss
+++ b/src/partials/_visibility.scss
@@ -1,13 +1,20 @@
-.flash-hidden\@s{
-  display: none  !important;
+.flash-hide\@sm{
+  @media (max-width: $breakpoint-sm) {
+    display: none  !important;
+  }
 }
 
-flash-hidden\@m {
-  display: none;
+
+.flash-hide\@md {
+  @media (max-width: $breakpoint-md) {
+    display: none !important;
+  }
 }
 
 
-flash-hidden\@l {
-  display: none;
+.flash-hide\@lg {
+  @media (max-width: $breakpoint-lg) {
+    display: none !important;
+  }
 }
 
